--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Todo Backend</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="style.css" rel="stylesheet" type="text/css">
-        <script src="main.js"></script>
-    </head>
-    <body>
-        <button id="get">Get Todos</button>
-        <button id="post">Post New Todo</button>
-        <button id="put">Mark Third Todo Complete</button>
-    </body>
+  <head>
+    <title>Magic The Gathering</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="main.css" />
+    <script src="main.js"></script>
+  </head>
+  <body>
+    <div class="jumbotron text-center">
+      <h1>Todo-backend</h1>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <button id="get">Get Todos</button>
+        </div>
+        <div class="col-sm-4">
+          <button id="post">Post New Todo</button>
+        </div>
+        <div class="col-sm-4">
+          <button id="put">Mark Third Todo Complete</button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
