--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Magic The Gathering</title>
+    <title>Todo-backend</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -19,12 +19,16 @@
       <div class="row">
         <div class="col-sm-4">
           <button id="get">Get Todos</button>
+          <ul id="get-todo"></ul>
         </div>
         <div class="col-sm-4">
+            <input id="todo-input" type="text">
           <button id="post">Post New Todo</button>
+          <ul id="post-new"></ul>
         </div>
         <div class="col-sm-4">
           <button id="put">Mark Third Todo Complete</button>
+          <ul id="put-list"></ul>
         </div>
       </div>
     </div>
