--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="style.css" />
     <script src="main.js"></script>
   </head>
   <body>
@@ -19,16 +19,14 @@
       <div class="row">
         <div class="col-sm-4">
           <button id="get">Get Todos</button>
-          <ul id="get-todo"></ul>
+          <ul></ul>
         </div>
         <div class="col-sm-4">
             <input id="todo-input" type="text">
           <button id="post">Post New Todo</button>
-          <ul id="post-new"></ul>
         </div>
         <div class="col-sm-4">
           <button id="put">Mark Third Todo Complete</button>
-          <ul id="put-list"></ul>
         </div>
       </div>
     </div>
